# pg_auto_run

./: Cargo.toml
schema/: init.sql
src/: main.rs  objects.rs  parser.rs  statements.rs
