[package]
name = "pg_auto_run"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.7", features = ["derive"] }
grep = "0.2.0"
ignore = "0.4"
regex = "1"
pg_query = "0.6"
enum-kinds = "0.5.1"

